--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -670,6 +670,18 @@ limitations under the License. -->
                                 <ToolTip Content="{x:Static res:Resource.RoundToolTip}" />
                             </Button.ToolTip>
                         </Button>
+                        <Button Grid.Row="2" Grid.Column="2" Tag="ceil" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource round}" Width="40" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.CeilToolTip}" />
+                            </Button.ToolTip>
+                        </Button>
+                        <Button Grid.Row="2" Grid.Column="3" Tag="floor" Click="InsertFunc_Click">
+                            <Rectangle Fill="{StaticResource round}" Width="40" Height="20" />
+                            <Button.ToolTip>
+                                <ToolTip Content="{x:Static res:Resource.FloorToolTip}" />
+                            </Button.ToolTip>
+                        </Button>
                     </Grid>
                 </Expander>
                 <Expander x:Name="standartLogicToolBar" Header="{x:Static res:Resource.StandartExpanderHeader}" Visibility="Collapsed" IsExpanded="True">
